# 7ZipContext

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
Package/: AppxManifest.xml
installer/: 7ZipContext.iss  7ZipContext.wxs  build-installer.bat  license.rtf  register.ps1  unregister.ps1
scripts/: install.ps1  uninstall.ps1
src/: ContextMenu.cpp  ContextMenu.def  ContextMenu.h  GuidInit.cpp  ProgressDialog.cpp  ProgressDialog.h  SevenZipCore.cpp  SevenZipCore.h
